style: adjust nav, repair close button on mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,10 @@
       url('./assets/fonts/lato-v23-latin-regular.svg#Lato') format('svg'); /* Legacy iOS */
 }
 
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css');
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css');
+}
 
 * {
   box-sizing: border-box;
@@ -157,16 +160,11 @@ a:active {
   /* animation: showMenu 1s ease; */
 }
 
-/* .show_menu {
-  transition: transform 1s ease;
-  transform: translateY(0%);
-} */
-
 .hide_menu {
   transform: translateY(-100%);
 }
 
-@keyframes showMenu {
+/* @keyframes showMenu {
   0% {
     transform: translateY(-100%);
     opacity: 0;
@@ -174,21 +172,6 @@ a:active {
   100% {
     transform: translateY(0%);
     opacity: 1;
-  }
-}
-
-/* @keyframes hideMenu {
-  0% {
-    transform: translateY(0%);
-    opacity: 1;
-  }
-  50% {
-    transform: translateY(-50%);
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateY(-100%);
-    opacity: 0;
   }
 } */
 
@@ -407,11 +390,7 @@ footer p {
 
   .mobile-visibility {
     visibility: visible;
-    /* position: relative; */
     display: flex;
-    /* flex-direction: column;
-    justify-content: space-between;
-    align-items: center; */
   }
 
   .hidden {
@@ -443,6 +422,7 @@ footer p {
   }
 
   .fa {
+    font-family: 'FontAwesome';
     position: fixed;
     top: 34px;
     right: 40px;
@@ -450,7 +430,7 @@ footer p {
     height: auto;
     display: flex;
     color: #9c7802;
-    z-index: 30;
+    z-index: 20;
   }
 
   .fa:hover,
